--- a/src/components/PullToRefresh/style.less
+++ b/src/components/PullToRefresh/style.less
@@ -7,7 +7,7 @@
     text-align: center;
   }
   &-loadMore {
-    padding: 8px;
+    margin-top: var(--gutter);
     font-size: @font-size-sm;
   }
 }
