--- a/src/styles/var.less
+++ b/src/styles/var.less
@@ -231,7 +231,7 @@
 @bubble-right-border-radius: @border-radius-lg;
 
 @bubble-left-gutter: 48px;
-@bubble-right-gutter: 18px;
+@bubble-right-gutter: 40px;
 
 @bubble-text-padding: 8px 16px;
 @bubble-text-line-height: @line-height-base;
@@ -471,6 +471,8 @@
 
 // MessageList
 @message-list-padding: var(--gutter);
+
+@message-spacer-y: 8px;
 
 // Toast
 @toast-content-min-width: 160px;
